# oxi-pulse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  hojaruta.md  plan-implementacion.md  sb-service.json
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: buffer.rs  main.rs
src/config/: mod.rs
src/metrics/: collector.rs  mod.rs
src/phone_home/: mod.rs
src/telemetry/: mod.rs
src/updater/: mod.rs
