[package]
name = "oxipulse"
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
description = "Ultralight open source server monitoring agent"
repository = "https://github.com/securyblack/oxi-pulse"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["metrics", "grpc-tonic", "tls-roots"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
